# online_judge

./: .gitignore  readme.md
acm_judge/: bad-judge.c  readme.md
acm_judge/100-3n+1/: CMakeLists.txt  in.txt  main.cpp  main_class.cpp  unordered_map.cpp
acm_judge/1016-SillySort/: CMakeLists.txt  out.txt  silly_sort.cpp
acm_judge/10706-NumSeq/: 10706-NumSeq-bench.cpp  10706-NumSeq-ut.cpp  10706-NumSeq.cpp  CMakeLists.txt  gen_test_case.py  in2.txt  in3.txt  out2.txt  out3.txt
acm_judge/10807-Prim/: in.txt  in2.txt  in3.txt
acm_judge/10830-ANewFunc/: 10830-2.c  10830.c  in.txt
acm_judge/10891-GameOfSum/: 10891.c  in2.txt  out2.txt
acm_judge/11073-EulerTotient/: 11073.c  in2.txt  in3.txt  other.cpp  out.txt
acm_judge/11122-TriTri/: 11122.c  in.txt  in2.txt
acm_judge/11134-FabledRooks/: 11134-2.c  11134.c  in2.txt
acm_judge/11161-HelpBrother/: Main.java  in.txt
acm_judge/11176-WinningStreak/: 11176.c  in.txt
acm_judge/11404-PalindromSeq/: 11404.c  in2.txt  out2.txt  t
acm_judge/11491-ErasingWining/: 11491.c
acm_judge/11709-TrustGroup/: 11709.c  in.txt
acm_judge/11730-NumTrans/: 11730-2.c  11730.c  in.txt  in2.txt  in4.txt  out2.txt  out3.txt
acm_judge/118-FlatWorldExplorer/: CMakeLists.txt  explorer.cpp  in2.txt  in5.txt  out2.txt  out5.txt  out6.txt
acm_judge/12002-HappyBirthday/: 12002-2.c  12002.c  12002.cpp  gen.sh  in3.txt  in4.txt  in5.txt  note.txt
acm_judge/12011-CompleteSet/: 12011.c  gen.c  go.sh  in.txt  in2.txt  in3.txt  main-2.c  main.c  out2.txt
acm_judge/12300-SmallestRectPolygon/: 12300.c
acm_judge/12399-NumPuzzII/: 12399.c  other.cpp
acm_judge/12413-BigNumCalc/: Main.java  test.py
acm_judge/602-Day/: 602-2.c  602.c  in.txt  in2.txt  out.txt
acm_judge/904-AirZone/: 904_air_zone.cpp  CMakeLists.txt  in2.txt  in3.txt  in4.txt  in5.txt  in6.txt  in7.txt  out2.txt  out6.txt
acm_judge/917-Euro2004/: .gitignore  917_euro2004.cpp  CMakeLists.txt  gen_data.py  in1.txt  in2.txt  in3.txt  in4.txt  in5.txt  out1.txt  out2.txt  out3.txt  out4.txt  out5.txt  trim.py
acm_judge/985-RoundMaze/: 985.c
acm_judge/util/: MRtest.c  bitop.c  tfindMin.c
bash/192/: sol.bash
bash/193/: sol.sh
bash/194/: sol.sh
bash/195/: sol.sh
cpp/1104/: leet.cpp  leet_test.cpp
cpp/1105/: leet.cpp  leet_test.cpp
cpp/1140/: leet.cpp  leet_test.cpp
cpp/1153/: leet.cpp  leet_test.cpp
cpp/1163/: leet.cpp  leet_test.cpp  slow.cpp
cpp/1210/: leet.cpp  leet_test.cpp
cpp/1405/: leet.cpp  leet_test.cpp
cpp/1487/: leet.cpp  leet_test.cpp  tle.cpp
cpp/1505/: leet.cpp  leet_test.cpp
cpp/1595/: leet.cpp  leet_test.cpp
cpp/1622/: 1.py  2.py  leet.cpp  leet_test.cpp
cpp/1659/: leet.cpp  leet_test.cpp
cpp/1671/: leet.cpp  leet_test.cpp
cpp/1681/: leet.cpp  leet_test.cpp  slow.cpp
cpp/1690/: leet.cpp  leet_test.cpp
cpp/1712/: leet.cpp  leet_test.cpp
cpp/1744/: leet.cpp  leet_test.cpp
cpp/1766/: leet.cpp  leet_test.cpp
cpp/1775/: leet.cpp  leet_test.cpp
cpp/1786/: leet.cpp  leet_test.cpp
cpp/1799/: leet_acc_others.cpp  leet_slow2.cpp  leet_slow3.cpp  leet_test.cpp  leet_wrong.cpp  leet_wrong2.cpp
cpp/1808/: leet.cpp  leet_test.cpp
cpp/1825/: leet.cpp  leet_test.cpp
cpp/1829/: leet.cpp  leet_test.cpp
cpp/1840/: leet.cpp  leet_test.cpp
cpp/1847/: leet.cpp  leet_test.cpp
cpp/1857/: leet.cpp  leet_test.cpp
cpp/1866/: leet.cpp  leet_test.cpp
cpp/1869/: leet.cpp  leet_test.cpp
cpp/1889/: leet.cpp  leet_test.cpp
cpp/200/: leet.cpp  leet_test.cpp
cpp/2163/: gen_tc.py  leet.cpp  leet_test.cpp  leet_wrong.cpp
cpp/2172/: leet.cpp  leet_test.cpp
cpp/31/: leet.cpp  leet_test.cpp
cpp/388/: leet.cpp  leet_test.cpp
cpp/39/: leet.cpp  leet_test.cpp
cpp/403/: leet.cpp  leet_test.cpp
cpp/423/: leet.cpp  leet_test.cpp
cpp/471/: leet.cpp  leet_test.cpp
cpp/474/: leet.cpp  leet_test.cpp  slow.cpp
cpp/629/: leet.cpp  leet_test.cpp  tle.cpp
cpp/685/: leet.cpp  leet_test.cpp
cpp/686/: leet.cpp  leet_test.cpp
cpp/790/: leet.cpp  leet_test.cpp
cpp/818/: leet.cpp  leet_test.cpp
cpp/875/: leet.cpp  leet_test.cpp
cpp/binary_inverted_tree/: leet.cpp
cpp/datetime_lib/: CMakeLists.txt  datetime.h  datetime_test.cpp
cpp/done/127/: CMakeLists.txt  leet.cpp  leet_test.cpp
cpp/done/162/: CMakeLists.txt  leet.cpp  leet_test.cpp  leet_v1.cpp
cpp/done/172/: CMakeLists.txt  leet.cpp  leet_test.cpp
cpp/done/622/: CMakeLists.txt  leet.cpp  leet_test.cpp
cpp/fast_rsqrt/: leet.cpp  leet_test.cpp
cpp/fseek/: leet.cpp  leet_test.cpp  text.txt
cpp/fun/: CMakeLists.txt  leet.cpp  leet_test.cpp
cpp/functor/: leet.cpp  leet_test.cpp
cpp/greater/: leet.cpp  leet_test.cpp
cpp/kmp/: leet.cpp  leet_test.cpp
cpp/kth_number/: leet.cpp  leet_test.cpp
cpp/lfr-like/: leet.cpp  leet_test.cpp
cpp/lower_bound/: leet_test.cpp
cpp/map_begin_end/: leet_test.cpp
cpp/monochrome/: leet.cpp  leet_test.cpp
cpp/my_ipq/: CMakeLists.txt  fuzz_test.cpp  leet.cpp  leet_test.cpp
cpp/my_memcpy/: leet.cpp  leet_test.cpp
cpp/my_pq/: leet.cpp  leet_test.cpp
cpp/next_permutation/: leet_test.cpp
cpp/radix_sort/: leet.cpp  leet_test.cpp
cpp/seg_tree/: seg_tree.cpp
cpp/std_function/: leet.cpp  leet_test.cpp
cpp/stl_perf/: leet.cpp  leet_test.cpp
cpp/zlib-ex/: CMakeLists.txt  main.cpp  run-zpipe.sh  zpipe.c
go/013/: leet.go  leet_test.go
go/031/: leet.go  leet_test.go
go/038/: leet.go  leet_test.go
go/045/: leet.go  leet_test.go
go/051/: leet.go  leet_test.go
go/052/: leet.go  leet_test.go
go/065/: leet.go  leet_test.go
go/066/: main.go  main_test.go
go/068/: leet.go  leet_test.go
go/077/: leet.go  leet_test.go
go/078/: leet.go  leet_test.go
python/: bsearch.py  heapq_test.py  p00001.py  p00002.py  p00003.py  p00005-1.py  p00005.py  p00006.py  p00007.py  p00008.py  p00009.py  p00010.py  p00014.py  p00016.py  p00018.py  p00019.py  p00021.py  p00022.py  p00023.py  p00024.py  p00026.py  p00027.py  p00028.py  p00029.py  p00032.py  p00033.py  p00035.py  p00036.py  p00037.py  p00039.py  p00040.py  p00041.py  p00042.py  p00043.py  p00044.py  p00046.py  p00047.py  p00048.py  p00049.py  p00053.py  (+112 more)
(+3353 files in other folders)
