PROJECT(Euro2004)
CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

IF (CMAKE_BUILD_TYPE STREQUAL "Debug")
    SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c++11 -Wall -Wextra -Wno-unused-parameter -pg")
ELSE ()
    SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c++11 -Wall -Wextra -Wno-unused-parameter -DONLINE_JUDGE")
ENDIF ()

IF (USE_ASAN)
    SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fsanitize=address")
ENDIF ()

SET(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS}")

SET(EXEC "917_euro2004")
ADD_EXECUTABLE(${EXEC} 917_euro2004.cpp)
SET(INPUT "${CMAKE_SOURCE_DIR}/in.txt")
SET(EXPECTED_OUTPUT "${CMAKE_SOURCE_DIR}/out.txt")
SET(MY_TMP "/tmp")
SET(MY_OUTPUT "${MY_TMP}/my_out")

ADD_CUSTOM_TARGET(t1 COMMAND ${PROJECT_BINARY_DIR}/${EXEC} < ${INPUT})
